# marketers

./: .gitignore  CLAUDE.md  README.md  conftest.py  pyproject.toml
.claude/agents/: article-writer.md  auditor.md  context-updater.md  guide-writer.md  jkk-scraper.md  seo-analyzer.md  title-optimizer.md  ur-scraper.md
.claude/skills/: article-writer.md  context-updater.md  guide-writer.md  jkk-scraper.md  ur-scraper.md
.github/workflows/: daily_post.yml  monitor_reactions.yml
docs/superpowers/plans/: 2026-04-24-agent-sdk-refactor.md  2026-04-24-reaction-monitoring.md
docs/superpowers/specs/: 2026-04-24-agent-sdk-refactor-design.md
scripts/: data_store.py  generate_and_post.py  monitor_reactions.py
tests/: test_data_store.py  test_generate_and_post.py  test_monitor_reactions.py
