[project]
name = "agent-sdk-refactor"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.66",
    "requests>=2.33.1",
    "requests-oauthlib>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
