[project]
name = "marketers"
version = "0.1.0"
description = "X自動投稿・顧客候補発掘システム"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.1.66",
    "requests>=2.33.1",
    "requests-oauthlib>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
